Alignment issue fixed.

--- a/src/app/core/single-product/single-product.component.css
+++ b/src/app/core/single-product/single-product.component.css
@@ -1,34 +1,16 @@
-.full-width {
-  width: 100%;
-}
-
-.shipping-card {
-  min-width: 120px;
-  margin: 20px auto;
-}
-
-.mat-radio-button {
-  display: block;
-  margin: 5px 0;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-.col {
-  flex: 1;
-  margin-right: 20px;
-}
-
-.col:last-child {
-  margin-right: 0;
-}
-
-mat-form-field{
+mat-form-field {
   margin: 10px;
 }
-mat-card{
-  margin: 30px;
+
+.alignment {
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+}
+
+form {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
